alignment fix

--- a/forum-web/css/forum.css
+++ b/forum-web/css/forum.css
@@ -214,8 +214,7 @@ body
 	font-size:1.0em;
 	line-height:140%;
 	padding-top:2.5%;
-	padding-left:2.7%;
-	padding-right:2.7%;
+	padding-left:5%;
 	/*margin:5px;*/
 	vertical-align: middle;
 }
@@ -271,9 +270,9 @@ body
 {
 	width:20%;
 	height:100%;
-	float:left;
+	float:middle;
 	/*background-color:rgba(255, 255, 255, 0.3);*/
-	text-align: left;
+	text-align: right;
 	/*margin:5px;*/
 }
 
